# rdfs_pydantic

./: .gitignore  LICENSE  README.md  crm.py  example_custom_base.py  pyproject.toml  tmp_mod.py
docs/: context.md  docstrings.md
example/: art.ttl
rdfs_pydantic/: __init__.py  base.py  cli.py  codegen.py  extraction.py  model_generator.py  models.py  module_generator.py  naming.py  package_generator.py  transformer.py  type_annotation.py  utils.py
test/: test_circular_imports.py  test_create_package.py  test_prefix_bindings.py  test_transformation.py
test/fixture/: class_docstring.md  class_multiple_inheritance.md  class_multiple_with_property_single.md  class_multiple_with_subclass_with_property_single.md  class_single.md  class_single_with_property_multiple.md  class_single_with_property_multiple_domains.md  class_single_with_property_single.md  class_single_with_property_type_literal.md  class_single_wth_comment.md  class_with_union_types.md  example.md  example_readme.md
tmp_pkg/: __init__.py  _base.py
tmp_pkg/crm/: E10_Transfer_of_Custody.py  E11_Modification.py  E12_Production.py  E13_Attribute_Assignment.py  E14_Condition_Assessment.py  E15_Identifier_Assignment.py  E16_Measurement.py  E17_Type_Assignment.py  E18_Physical_Thing.py  E19_Physical_Object.py  E1_CRM_Entity.py  E20_Biological_Object.py  E21_Person.py  E22_Human_Made_Object.py  E24_Physical_Human_Made_Thing.py  E25_Human_Made_Feature.py  E26_Physical_Feature.py  E27_Site.py  E28_Conceptual_Object.py  E29_Design_or_Procedure.py  E2_Temporal_Entity.py  E30_Right.py  E31_Document.py  E35_Title.py  (+53 more)
(+43 files in other folders)
