[project]
name = "rdfs-pydantic"
version = "0.4.0"
description = "Create Pydantic models from RDFS ontologies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.5.0",
    "requests>=2.32.5",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-testmark>=1.0",
]
